--- a/src/components/TableContainer/TableContainer.scss
+++ b/src/components/TableContainer/TableContainer.scss
@@ -1,4 +1,13 @@
+
 .TableContainer {
+  .table {
+    table-layout: fixed;
+  }
+
+  .table-responsive {
+    overflow: visible;
+  }
+
   .tableHead {
     vertical-align: top;
   }
@@ -7,53 +16,16 @@
     padding: 0;
   }
 
-  .test {
-    background-color: blue;
-  }
-  
-  .sortButton {
-    height: 100%;
-    width: 100%;
-    border: 0;
-    text-align: left;
-    font-weight: bold;
-    background-color: white;
-  }
-
-  .dropdown,
-  .dropup {
-    position: relative;
-  }
-
-  .caret {
-    display: inline-block;
+  .arrow {
     margin-left: 0.255em;
-    vertical-align: 0.255em;
-    content: '';
-  }
-
-  .dropup .caret {
-    border-top: 0.35em solid black;
-    border-right: 0.35em solid transparent;
-    border-bottom: 0;
-    border-left: 0.35em solid transparent;
 
     &--both {
-      border-top: 0.35em solid #ced4da;
-    }
-  }
-
-  .dropdown .caret {
-    border-bottom: 0.35em solid black;
-    border-right: 0.35em solid transparent;
-    border-left: 0.35em solid transparent;
-
-    &--both {
-      border-bottom: 0.35em solid #ced4da;
+      color: #ced4da;
     }
   }
 
   .selectRow--cell {
+    width: 40px;
     text-align: center;
   }
 
@@ -70,10 +42,4 @@
       box-shadow: none;
     }
   }
-}
-
-.indeterminate .form-check-input[type='checkbox']:not(:checked) {
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
